--- a/front/src/index.css
+++ b/front/src/index.css
@@ -2,14 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
 :root {
-	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 	line-height: 1.5;
 	font-weight: 400;
 
 	color-scheme: light dark;
-	color: rgba(255, 255, 255, 0.87);
-	background-color: #242424;
+	color: #166816;
+	background-color: #ececec;
 
 	font-synthesis: none;
 	text-rendering: optimizeLegibility;
@@ -47,9 +49,10 @@ button {
 	font-size: 1em;
 	font-weight: 500;
 	font-family: inherit;
-	background-color: #1a1a1a;
+	background-color: #166816;
 	cursor: pointer;
 	transition: border-color 0.25s;
+	color: white;
 }
 button:hover {
 	border-color: #646cff;
