--- a/front/src/components/Landing/Landing.module.css
+++ b/front/src/components/Landing/Landing.module.css
@@ -14,7 +14,9 @@
 
 .container h1 {
     color:white;
-
+}
+.container h2 {
+  font-size: 1.2rem;
 }
 
 .loginContainer {
@@ -36,7 +38,7 @@ label {
 }
 
 form input {
-  width: 200px;
+  width: 250px;
   padding: 0.5rem;
   padding-left: 1rem;
   margin-bottom: 0.8rem;
