--- a/front/src/components/Landing/Landing.module.css
+++ b/front/src/components/Landing/Landing.module.css
@@ -7,20 +7,20 @@
   display: flex;
   justify-content: space-between;
   padding-left: 600px;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: white;
   border-radius: 10px;
 }
 
 .container h1 {
-    color:white;
+  color: white;
 }
 .container h2 {
   font-size: 1.2rem;
 }
 
 .loginContainer {
-  background-color: rgba(19, 19, 19, 0.801);
+  background-color: rgba(19, 19, 19, 0.8);
   width: 300px;
   height: 100%;
   display: flex;
@@ -53,6 +53,9 @@ button[type="submit"] {
   color: #ffffff;
   border: none;
   cursor: pointer;
+}
+button[type="submit"]:disabled:hover {
+  cursor: not-allowed;
 }
 
 .socialButtons {
