--- a/front/src/App.css
+++ b/front/src/App.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  font-family: "Barlow", sans-serif;
 }
 
 .logo {
@@ -40,4 +41,3 @@
 .read-the-docs {
   color: #888;
 }
-
