--- a/front/src/components/Detail/Detail.module.css
+++ b/front/src/components/Detail/Detail.module.css
@@ -9,7 +9,7 @@
   margin-bottom: 10rem;
   margin-top: 10rem;
 }
-img {
+.father img {
   width: 500px;
   margin-left: 1rem;
   border-radius: 10px;
