--- a/front/src/components/Card/Card.css
+++ b/front/src/components/Card/Card.css
@@ -1,9 +1,14 @@
 .card {
-    width: 25%;
-    min-width: 350px;
+    width: 50%;
+    min-width: 200px;
     margin: 1rem;
     box-sizing: border-box;
+    max-width: 400px; 
   }
+.description{
+  text-align: center;
+
+}
   
   @media (max-width: 768px) {
     .card {
