rutas get/:id con modelo reserva

--- a/front/src/index.css
+++ b/front/src/index.css
@@ -10,7 +10,7 @@
   color-scheme: light dark;
   color: #166816;
   background-color: #ececec;
-  backgroun
+  /* backgroun */
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
