--- a/front/src/components/Header/Header.module.css
+++ b/front/src/components/Header/Header.module.css
@@ -20,18 +20,18 @@ body {
   line-height: 1.8;
 }
 
-h1 {
+/* h1 {
   font-weight: 900;
   margin: 1rem 0 4rem 0;
-}
+} */
 
-h1 {
+/* h1 {
   font-size: 4.8rem;
-}
+} */
 
-a {
+/* a {
   text-decoration: none
-}
+} */
 
 img {
   max-width: 100%;
