--- a/front/src/components/Promociones/Promociones.module.css
+++ b/front/src/components/Promociones/Promociones.module.css
@@ -20,14 +20,14 @@ body {
     line-height: 1.8;
 }
 
-h1 {
+/* h1 {
     font-weight: 900;
     margin: 1rem 0 4rem 0;
-}
+} */
 
-h1 {
+/* h1 {
     font-size: 4.8rem;
-}
+} */
 
 a {
     text-decoration: none
