--- a/front/src/index.css
+++ b/front/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
@@ -40,6 +40,7 @@ body {
   background-image: linear-gradient(to right, #434343 0%, black 100%);
   /* agregado */
   font-family: var(--fuentePrincipal);
+  /* font-family: "Barlow", sans-serif; */
   font-size: 1.6rem;
   line-height: 1.8;
 }
