--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
   text-align: center;
-  font-family: "Barlow", sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 
 .logo {
