--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,7 +1,8 @@
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   text-align: center;
   font-family: 'Raleway', sans-serif;
+  margin:0 auto
 }
 
 .logo {
