--- a/front/src/App.css
+++ b/front/src/App.css
@@ -2,7 +2,10 @@
   max-width: 1280px;
   text-align: center;
   font-family: "Barlow", sans-serif;
+  margin: 0 auto;
+  padding: 2rem;
 }
+
 
 .logo {
   height: 6em;
