nuevo landing, register, redux

--- a/front/src/components/Detail/Detail.module.css
+++ b/front/src/components/Detail/Detail.module.css
@@ -16,8 +16,8 @@
 .father {
   display: flex;
   flex-direction: row;
-  margin-bottom: 10rem;
-  margin-top: 10rem;
+  margin-bottom: 2rem;
+  /* margin-top: 1rem; */
   color: white;
 }
 .father img {
