--- a/front/src/components/CanchasTable/CanchasTable.css
+++ b/front/src/components/CanchasTable/CanchasTable.css
@@ -39,3 +39,30 @@
 .error-message{
   color: red;
 }
+
+.form-container {
+  display: flex;
+  justify-content: center;
+}
+
+.form-container input{
+  color: green;
+  width: 25rem;
+}
+
+.form-container textarea{
+  color: green;
+}
+
+.form-container select{
+  color: green;
+  width: 20rem;
+  height: 5rem;
+}
+
+.form-container label{
+  color: white;
+  font-weight: bold;
+  font-size: 1.5rem;
+
+}
