--- a/front/src/components/Detail/Detail.module.css
+++ b/front/src/components/Detail/Detail.module.css
@@ -17,7 +17,7 @@
   display: flex;
   flex-direction: row;
   margin-bottom: 2rem;
-  /* margin-top: 1rem; */
+  margin-top: 0rem;
   color: white;
 }
 .father img {
