--- a/front/src/components/Detail/Detail.module.css
+++ b/front/src/components/Detail/Detail.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: flex-start;
   text-align: left;
+  margin-left: 1rem;
 }
 
 .container form {
@@ -10,8 +11,15 @@
  padding: 1rem;
  margin-top: 1rem;
  border-radius: 1rem;
- background-color: #303030;
+ background-color: #202020;
 }
+
+.container form button[type="submit"] {
+  background-color: rgb(255, 255, 255);
+  color: black;
+  font-weight: 700;
+ }
+ 
 
 .father {
   display: flex;
