--- a/front/src/components/Profile/Profile.css
+++ b/front/src/components/Profile/Profile.css
@@ -1,9 +1,11 @@
 .profile-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     place-items: flex-start;
     width: 1000px;
-    justify-content: space-around;
+    justify-content: center;
+    color: white;
+    font-weight: 500;
 }
 
 .profile-container p {
