--- a/front/src/components/Header/Header.module.css
+++ b/front/src/components/Header/Header.module.css
@@ -31,8 +31,6 @@ img {
   margin-top: 5rem;
 }
 
-.header {
-}
 
 @media (min-width: 768px) {
   .header {
@@ -50,8 +48,7 @@ img {
   font-weight: 300;
   text-align: center;
   font-size: 3rem;
-  background-image: linear-gradient( 135deg, #81FBB8 10%, #28C76F 100%);
-  padding: 1rem;
+  background-image: linear-gradient(135deg, #4fd38a 10%, #1a914f 100%);  padding: 1rem;
 }
 @media (min-width: 768px) {
   .nombresitio {
