--- a/front/src/components/Navbar/Navbar.module.css
+++ b/front/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,6 @@
 .contenedor {
-  width: 100% ;
+  width: 100%;
   margin: 0 auto;
-  width: 90%;
   position: relative;
 }
 
@@ -78,6 +77,7 @@
   display: flex;
   font-size: 20px;
   font-weight: 600;
+  margin-right: 5rem;
 }
 .telefono::before {
   content: "";
@@ -101,6 +101,7 @@
   align-items: center;
   width: 100%;
   gap: 10px;
+  margin-right: 1rem;
 }
 
 @media (min-width: 768px) {
