--- a/front/src/components/Profile/Profile.css
+++ b/front/src/components/Profile/Profile.css
@@ -1,17 +1,20 @@
 .profile-container {
-    display: flex;
-    flex-direction: row;
-    place-items: flex-start;
-    width: 1000px;
-    justify-content: center;
-    color: white;
-    font-weight: 500;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: white;
+  font-weight: 500;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
+  background-color: #202020;
+  border-radius: 1rem;
+  width: 50%;
+  max-width: 90%;
+  height: 400px;
+  max-height: 500px;
 }
 
-.profile-container p {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 1rem;
+.profile-container input{
+    height: 30px;
 }
