--- a/front/src/components/MisReservas/MisReservas.module.css
+++ b/front/src/components/MisReservas/MisReservas.module.css
@@ -3,6 +3,8 @@
     flex-direction: column;
     align-items: flex-start;
     margin: 3rem;
+    margin-top: 20rem;
+    margin-bottom: 35rem;
 }
 .container table {
     margin-top: 3rem;
