--- a/front/src/components/ReservasTable/ReservasTable.module.css
+++ b/front/src/components/ReservasTable/ReservasTable.module.css
@@ -1,31 +1,32 @@
-.reservas-table-container {
+.reservasTableContainer {
     display: grid;
     grid-template-columns: 1fr;
     gap: 1rem;
     background-color: #2a2a2a;
     padding: 1rem;
-    border-radius: 5px;
-    margin: 1rem;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+
   }
   
-  .reservas-table {
+  .reservasTable {
     width: 100%;
     border-collapse: collapse;
     color: #f0f0f0;
   }
   
-  .reservas-table th {
+  .reservasTable th {
     background-color: #3a3a3a;
     padding: 0.5rem;
     text-align: left;
   }
   
-  .reservas-table td {
+  .reservasTable td {
     padding: 0.5rem;
     border-bottom: 1px solid #3a3a3a;
   }
   
-  .reservas-table button {
+  .reservasTable button {
     background-color: transparent;
     border: none;
     color: #f0f0f0;
@@ -33,7 +34,7 @@
     margin-right: 0.5rem;
   }
   
-  .reservas-table button:hover {
+  .reservasTable button:hover {
     color: #d0d0d0;
   }
   
