--- a/front/src/components/About/About.css
+++ b/front/src/components/About/About.css
@@ -2,11 +2,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 1rem;  
+  gap: 1rem;
 }
 
 .miembro-card {
-  background-color: #f8f9fa; /* El color del fondo que se usa en la home */
+  background-color: #ffffffb7; /* El color del fondo que se usa en la home */
   border-radius: 0.25rem;
   padding: 10rem 0.5rem;
   margin-bottom: 0.75rem;
@@ -14,12 +14,12 @@
   box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15);
   width: 47rem;
   display: grid;
-  grid-template-columns: auto minmax(0, calc(100% - var(--image-size) - .5rem));
+  grid-template-columns: auto minmax(0, calc(100% - var(--image-size) - 0.5rem));
   margin-top: 50px;
 }
 
-.imagen-container{
-    --image-size: 250px;
+.imagen-container {
+  --image-size: 250px;
 }
 
 .miembro-img {
@@ -30,7 +30,7 @@
   margin-right: auto;
   object-fit: cover; /* Asegura que la imagen mantendrá su aspecto original */
   border-radius: 50%; /* Para darle forma redonda a la imagen */
-  margin-bottom: 15px;  
+  margin-bottom: 15px;
 }
 
 .iconos {
@@ -45,7 +45,7 @@
   color: #333; /* Cambia el color del ícono aquí */
 }
 
-.titulo{
+.titulo {
   display: flex;
   justify-content: center;
 }
