--- a/front/src/components/Navbar/Navbar.module.css
+++ b/front/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,7 @@
 .contenedor {
-  width: 100%;
-  margin: 0 auto;
+  width: 90%;
+  /* margin: 0 auto; */
+  margin-top: 3rem;
   position: relative;
 }
 
@@ -23,6 +24,12 @@
   margin-top: 5rem;
 }
 
+.header {
+  display: flex;
+  justify-content: center;
+  background-color: #202020;
+  margin-bottom: 3rem;
+}
 
 
 @media (min-width: 768px) {
