--- a/front/src/components/CreadorCanchas/CreadorCanchas.css
+++ b/front/src/components/CreadorCanchas/CreadorCanchas.css
@@ -1,5 +1,4 @@
 .card {
-
   background-color: #343a40;
   border-radius: 10px;
   padding: 20px;
@@ -12,16 +11,16 @@
 }
 
 .form-container input {
-  color: green;
+  color: white;
   width: 25rem;
 }
 
 .form-container textarea {
-  color: green;
+  color: white;
 }
 
 .form-container select {
-  color: green;
+  color: white;
   width: 20rem;
   height: 5rem;
 }
@@ -33,5 +32,5 @@
 }
 
 .form-container button{ 
-  background-color: red;
+  background-color: rgb(43, 43, 43);
 }
