--- a/front/src/index.css
+++ b/front/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
@@ -15,11 +15,11 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
   /* agregado */
-  --blanco: #FFF;
+  --blanco: #fff;
   --negro: #111111;
-  --gris: #343A40;
+  --gris: #343a40;
 
-  --fuentePrincipal: 'Raleway', sans-serif;
+  --fuentePrincipal: "Raleway", sans-serif;
 }
 
 a {
@@ -37,7 +37,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-image: linear-gradient(to right, #434343 0%, black 100%);
+  background: #111111;
   /* agregado */
   font-family: var(--fuentePrincipal);
 
@@ -49,7 +49,9 @@ html {
   font-size: 62.5%;
   box-sizing: border-box;
 }
-*,*:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
@@ -70,6 +72,9 @@ button {
   transition: border-color 0.25s;
   color: white;
 }
+input {
+  color: white;
+}
 button:hover {
   border-color: #646cff;
 }
@@ -80,13 +85,19 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: #ffffff;
+    background-color: #111111;
   }
   a:hover {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #166816;
+  }
+  input {
+    background-color: #303030;
+  }
+  input select {
+    background-color: #303030;
   }
 }
