--- a/front/src/components/Contactos/Contactos.css
+++ b/front/src/components/Contactos/Contactos.css
@@ -13,7 +13,7 @@
     
   }
   
-  .form-container {
+  .form-container-contacto {
      width :100%; 
      display:flex; 
      flex-direction :column ; 
