--- a/front/src/components/Reviews/Reviews.css
+++ b/front/src/components/Reviews/Reviews.css
@@ -1,22 +1,29 @@
 .reviews {
-  width: 100%;
+  width: 50%;
   padding: 20px;
   margin: 0 auto;
-
 }
 
 .card-container {
   display: flex; /* Alinea horizontalmente */
-  justify-content: space-around;
-  
+  justify-content: space-between;
+  margin-left: -320px;
 }
 
-.card {
+.card-review {
   border-radius: 10px;
   box-shadow: 0-3 px6 px rgba (0, 0, 0, 0.1);
-  margin-bottom: 20 px;
+  margin-bottom: 20px;
   overflow: hidden;
- 
+  width: 100%;
+  min-width: 350px;
+  height: 200px;
+  margin: 1rem;
+  margin-left: 50px;
+  box-sizing: border-box;
+  max-width: auto;
+  background-color: #252525;
+
 }
 
 .card-header {
