--- a/front/src/components/CreadorReviews/CreadorReviews.module.css
+++ b/front/src/components/CreadorReviews/CreadorReviews.module.css
@@ -1,5 +1,5 @@
-.reviews-card {
-  background-color: #fff;
+.reviewsCard {
+  background-color: #232323;
   border-radius: 10px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
   margin-bottom: 25px;
@@ -12,11 +12,9 @@
   margin: 0 auto;
 }
 
-.reviews-card-header{
+.reviewsCard-header{
     display: flex;
     justify-content: center;
-    
-    
 }
 
 .form-container {
