--- a/front/src/components/Oportunidades/Oportunidades.module.css
+++ b/front/src/components/Oportunidades/Oportunidades.module.css
@@ -1,168 +1,332 @@
-/* :root {
-    --blanco: #FFF;
-    --negro: #111111;
-    --gris: #343A40;
-
-    --fuentePrincipal: 'Raleway', sans-serif;
-}
-
-html {
-    font-size: 62.5%;
-    box-sizing: border-box;
-}
-  *,*:before, *:after {
-    box-sizing: inherit;
-}
-
-body {
-    font-family: var(--fuentePrincipal);
-    font-size: 1.6rem;
-    line-height: 1.8;
-} */
-
-/* h1 {
-    font-weight: 900;
-    margin: 1rem 0 4rem 0;
-} */
-
-/* h1 {
-    font-size: 4.8rem;
-} */
-
-/* a {
-    text-decoration: none
-} */
-
-img {
-    max-width: 100%;
-    display: block;
+/* img {
+  max-width: 100%;
+  display: block;
 }
 
 .contenedor {
-    max-width: 120rem;
-    margin: 0 auto;
-    width: 90%;
+  max-width: 120rem;
+  margin: 0 auto;
+  width: 90%;
 }
 
 .btn {
-    color: var(--gris);
-    background-color: var(--blanco);
-    border: 1px solid var(--gris);
-    transition: background-color .3s;
+  color: var(--gris);
+  background-color: var(--blanco);
+  border: 1px solid var(--gris);
+  transition: background-color 0.3s;
 }
 
 .btn:hover {
-    background-color: var(--gris);
-    color: var(--blanco);
+  background-color: var(--gris);
+  color: var(--blanco);
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 .mt-5 {
-    margin-top: 5rem;
+  margin-top: 5rem;
 }
 
-
 .contenedormodelos {
-    padding-top: 5rem;
-    padding-bottom: 1rem;
-    margin-bottom: 5rem;
-    padding-left: 4rem;
-    padding-right: 4rem;
-    color: #FFF;
-    min-height: 20rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  padding-top: 5rem;
+  padding-bottom: 1rem;
+  margin-bottom: 5rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  color: #fff;
+  min-height: 20rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .contenedormodelos h1 {
-    font-size: 5rem;
-    font-weight: 600;
-    text-align: left;
-    padding-left: 2rem;
+  font-size: 5rem;
+  font-weight: 600;
+  text-align: left;
+  padding-left: 2rem;
 }
 
 .contenedormodelos p {
-    text-align: left;
-    padding-bottom: 2rem;
-    padding-left: 2.4rem;
+  text-align: left;
+  padding-bottom: 2rem;
+  padding-left: 2.4rem;
 }
 
 .listadopromociones {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (min-width: 992px) {
-    .listadopromociones {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(2, 20rem);
-        gap: 4rem;
-    }
+  .listadopromociones {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 20rem);
+    gap: 4rem;
+  }
 }
 
 .promouno {
-    font-size: 2.4rem;
-    font-weight: 600;
-    text-align: left;
-    padding: 2rem;
-    align-items: center;
-    display: flex;
-    justify-content: center;
+  font-size: 2.4rem;
+  font-weight: 600;
+  text-align: left;
+  padding: 2rem;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 
-    background-image: url(../../assets/canchanoche2.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom center;
+  background-image: url(../../assets/vestuario.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom center;
 
-    background-color: rgb(255 255 255 / .5);
-    margin-bottom: 2rem;
-    border-radius: 1.5rem;
+  background-color: rgb(255 255 255 / 0.5);
+  margin-bottom: 2rem;
+  border-radius: 1.5rem;
+}
+.conte {
+  border-radius: 15px;
+  background-color: #4fd38a;
+}
+.conte h3 {
+  color: rgb(0, 0, 0);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.445);
+  letter-spacing: 2px;
 }
 
 .promodos {
-    font-size: 2.4rem;
-    font-weight: 600;
-    text-align: left;
-    padding: 2rem;
-    align-items: center;
-    display: flex;
-    justify-content: center;
+  font-size: 2.4rem;
+  font-weight: 600;
+  text-align: left;
+  padding: 2rem;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 
-    background-image: url(../../assets/birra.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+  background-image: url(../../assets/BUFFET.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 
-    background-color: rgb(255 255 255 / .5);
-    margin-bottom: 2rem;
-    border-radius: 1.5rem;
+  background-color: rgb(255 255 255 / 0.5);
+  margin-bottom: 2rem;
+  border-radius: 1.5rem;
 }
 
 .promotres {
-    font-size: 3.6rem;
-    font-weight: 600;
-    text-align: left;
-    padding: 2rem;
-    align-items: center;
-    display: flex;
-    justify-content: center;
+  font-size: 3.6rem;
+  font-weight: 600;
+  text-align: left;
+  padding: 2rem;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 
-    background-color: rgba(255, 255, 255, 0.315);
-    background-image: url(../../assets/FutbolFigma4.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    margin-bottom: 2rem;
-    border-radius: 1.5rem;
+  background-color: rgba(255, 255, 255, 0.315);
+  background-image: url(../../assets/parrilla.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 2rem;
+  border-radius: 1.5rem;
 }
 
 @media (min-width: 992px) {
-    .promotres {
-        grid-column: 2 / 3;
-        grid-row: 1 / 3;
-    }
+  .promotres {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+  }
+} */
+
+/* Estilos generales */
+/* Estilos generales */
+/* img {
+  max-width: 100%;
+  display: block;
+}
+
+.contenedor {
+  max-width: 120rem;
+  margin: 0 auto;
+  width: 90%;
+}
+
+.btn {
+  color: #4fd38a;
+  background-color: #fff;
+  border: 1px solid #4fd38a;
+  transition: background-color 0.3s;
+}
+
+.btn:hover {
+  background-color: #4fd38a;
+  color: #fff;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.mt-5 {
+  margin-top: 5rem;
+}
+
+.contenedormodelos {
+  padding-top: 5rem;
+  padding-bottom: 1rem;
+  margin-bottom: 5rem;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  color: #fff;
+  min-height: 20rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.contenedormodelos h1 {
+  font-size: 5rem;
+  font-weight: 600;
+  text-align: left;
+  padding-left: 2rem;
+}
+
+.contenedormodelos p {
+  text-align: left;
+  padding-bottom: 2rem;
+  padding-left: 2.4rem;
+}
+
+.listadopromociones {
+  display: flex;
+  flex-direction: column;
+}
+
+@media (min-width: 992px) {
+  .listadopromociones {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 20rem);
+    gap: 4rem;
+  }
+}
+
+.promouno {
+  font-size: 2.4rem;
+  font-weight: 600;
+  text-align: left;
+  padding: 2rem;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+
+  background-image: url(../../assets/vestuario.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom center;
+
+  background-color: rgba(79, 211, 138, 0.5);
+  margin-bottom: 2rem;
+  border-radius: 1.5rem;
+}
+
+.conte {
+  border-radius: 15px;
+  background-color: #4fd38a;
+}
+
+.conte h3 {
+  color: #000;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.445);
+  letter-spacing: 2px;
+}
+
+.promodos {
+  font-size: 2.4rem;
+  font-weight: 600;
+  text-align: left;
+  padding: 2rem;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+
+  background-image: url(../../assets/BUFFET.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+
+  background-color: rgba(79, 211, 138, 0.5);
+  margin-bottom: 2rem;
+  border-radius: 1.5rem;
+}
+
+.promotres {
+  font-size: 3.6rem;
+  font-weight: 600;
+  text-align: left;
+  padding: 2rem;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+
+  background-color: rgba(255, 255, 255, 0.5);
+  background-image: url(../../assets/parrilla.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 2rem;
+  border-radius: 1.5rem;
+}
+
+@media (min-width: 992px) {
+  .promotres {
+    grid-column: 2 / 3;
+    grid-row: 1 / 3;
+  }
+} */
+.contenedormodelos {
+  background-color: #f2f2f2;
+  padding: 50px;
+  text-align: center;
+}
+
+.contenedormodelos h1 {
+  font-size: 48px;
+  color: #45bf70;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.contenedormodelos p {
+  font-size: 20px;
+  color: #333;
+  margin-bottom: 30px;
+}
+
+.listadopromociones {
+  display: flex;
+  justify-content: space-between;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.promouno,
+.promodos,
+.promotres {
+  background-color: #ff9933;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  padding: 50px;
+  flex-basis: 30%;
+}
+
+.conte h3 {
+  font-size: 28px;
+  color: #fff;
+  margin-top: 0;
+  margin-bottom: 10px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
