--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,10 +1,11 @@
 #root {
   max-width: 100%;
   text-align: center;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   margin: 0 auto;
+  --verde-claro: rgb(89, 223, 149);
+  --verde-oscuro: rgb(26, 145, 79);
 }
-
 
 .logo {
   height: 6em;
