--- a/front/src/components/Detail/Detail.module.css
+++ b/front/src/components/Detail/Detail.module.css
@@ -1,7 +1,7 @@
 .container {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   text-align: left;
   margin-left: 1rem;
   max-width: 55%;
@@ -14,6 +14,10 @@
   margin-top: 1rem;
   border-radius: 1rem;
   background-color: #202020;
+  display: flex;
+  flex-direction: column;
+  place-content: center;
+  color:white
 }
 
 .container form button[type="submit"] {
@@ -27,7 +31,8 @@
   flex-direction: row;
   margin-bottom: 2rem;
   margin-top: 0rem;
-  color: white;
+  /* color: white; */
+  place-content: center;
 }
 .father img {
   width: 500px;
@@ -36,22 +41,25 @@
 }
 
 .ocupado {
-  padding: 5px 10px 5px 10px;
-  border-radius: 1.5rem;
+  padding: 10px 20px 10px 20px;
+  border-radius: 1rem;
   margin-right: 0.5rem;
   margin-bottom: 0.5rem;
-  background-color: grey;
+  background-color: #ba3b3b;
+  border: none;
 }
 .ocupado:hover {
   cursor: not-allowed;
 }
 
 .libre {
-  padding: 5px 10px 5px 10px;
-  border-radius: 1.5rem;
+  padding: 10px 20px 10px 20px;
+  border-radius: 1rem;
   margin-right: 0.5rem;
   margin-bottom: 0.5rem;
   cursor: pointer;
+  border: none;
+  background-color: #3BBA74;
 }
 .libre:focus {
   background-color: rgb(39, 83, 204);
@@ -67,15 +75,17 @@
 }
 .libre:hover {
   cursor: pointer;
+  border: none;
 }
 
 .seleccionado {
-  padding: 5px 10px 5px 10px;
-  border-radius: 1.5rem;
+  padding: 10px 20px 10px 20px;
+  border-radius: 1rem;
   margin-right: 0.5rem;
   margin-bottom: 0.5rem;
   cursor: pointer;
   background-color: rgb(39, 83, 204);
+  border: none;
 }
 
 .date {
@@ -97,4 +107,22 @@
   max-width: 55rem;
   height: 44rem;
   object-fit: cover;
+}
+.canchas {
+  display: flex;
+  justify-content: center;
+}
+.cancha {
+  margin: 2rem;
+  text-align: center;
+}
+.horarios {
+  margin: 1rem;
+  background-color: #f1f1f1;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 1rem;
+  border-radius: 1rem;
+  box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.5);
 }
