--- a/front/src/components/Navbar/Navbar.module.css
+++ b/front/src/components/Navbar/Navbar.module.css
@@ -1,7 +1,7 @@
 .contenedor {
   width: 90%;
   /* margin: 0 auto; */
-  margin-top: 3rem;
+  /* margin-top: 3rem; */
   position: relative;
 }
 
@@ -15,6 +15,8 @@
 .btn:hover {
   background-color: var(--gris);
   color: var(--blanco);
+  border-radius: 1rem;
+
 }
 
 .text-center {
@@ -27,10 +29,14 @@
 .header {
   display: flex;
   justify-content: center;
-  background-color: #202020;
-  margin-bottom: 3rem;
+  /* background: rgb(26, 145, 79); */
+  background: linear-gradient(
+    180deg,
+    rgba(89, 223, 149, 1) 0%,
+    rgba(26, 145, 79, 1) 100%
+  );
+  /* margin-bottom: 3rem; */
 }
-
 
 @media (min-width: 768px) {
   .header {
@@ -48,7 +54,7 @@
   font-weight: 300;
   text-align: center;
   font-size: 3rem;
-  background-image: linear-gradient(135deg, #4fd38a 10%, #1a914f 100%);
+  /* background-image: linear-gradient(135deg, #4fd38a 10%, #1a914f 100%); */
   padding: 1rem;
 }
 @media (min-width: 768px) {
@@ -120,6 +126,7 @@
   padding: 0.5rem;
   transition: background-color 300ms;
   text-align: center;
+  border-radius: 1rem;
 }
 
 @media (min-width: 768px) {
