--- a/front/src/components/Oportunidades/Oportunidades.module.css
+++ b/front/src/components/Oportunidades/Oportunidades.module.css
@@ -287,7 +287,6 @@
   }
 } */
 .contenedormodelos {
-  background-color: #f2f2f2;
   padding: 50px;
   text-align: center;
 }
@@ -308,26 +307,65 @@
 
 .listadopromociones {
   display: flex;
-  justify-content: space-between;
-  max-width: 800px;
-  margin: 0 auto;
+  flex-direction: column;
+  place-content: center;
+  place-items: center;
+  max-width: 90%;
+  margin: auto;
 }
 
-.promouno,
-.promodos,
-.promotres,
-.promocuatro {
-  background-color: #ff9933;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-  padding: 50px;
-  flex-basis: 40%;
+.filauno {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 20rem;
+  font-weight: 800;
+  font-size: xx-large;
 }
-
-.conte h3 {
-  font-size: 28px;
-  color: #fff;
-  margin-top: 0;
-  margin-bottom: 10px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+.filados {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 20rem;
+  margin-top: 1.5rem;
+  font-weight: 800;
+  font-size: xx-large;
+}
+.vestuarios {
+  background-color: #45bf70;
+  width: 60%;
+  margin-right: 1.5rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  padding: 1rem 1rem 1rem 2rem;
+  border-radius: 1rem;
+}
+.buffet {
+  width: 40%;
+  background-color: yellow;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  padding: 1rem 1rem 1rem 2rem;
+  border-radius: 1rem;
+}
+.parrillas {
+  width: 40%;
+  background-color: orange;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  padding: 1rem 1rem 1rem 2rem;
+  border-radius: 1rem;
+}
+.social {
+  width: 60%;
+  background-color: skyblue;
+  margin-left: 1.5rem;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  padding: 1rem 1rem 1rem 2rem;
+  border-radius: 1rem;
 }
