--- a/front/src/index.css
+++ b/front/src/index.css
@@ -7,7 +7,7 @@
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
-  color: #166816;
+  color: #111;
   background-color: #ececec;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -37,7 +37,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background: #111111;
+  background: #fff;
   /* agregado */
   font-family: var(--fuentePrincipal);
 
@@ -73,7 +73,7 @@ button {
   color: white;
 }
 input {
-  color: white;
+  color: #111;
 }
 button:hover {
   border-color: #646cff;
