--- a/front/src/components/Oportunidades/Oportunidades.module.css
+++ b/front/src/components/Oportunidades/Oportunidades.module.css
@@ -293,7 +293,7 @@
 
 .contenedormodelos h1 {
   font-size: 48px;
-  color: #45bf70;
+  color: #3db868;
   font-weight: bold;
   text-transform: uppercase;
   letter-spacing: 2px;
