--- a/front/src/components/Carousel/Carousel.module.css
+++ b/front/src/components/Carousel/Carousel.module.css
@@ -1,22 +1,31 @@
 .scroll {
   cursor: pointer;
   color: rgb(255, 255, 255);
-  text-shadow: 1px 1px 25px rgba(0,0,0,1);
+  text-shadow: 1px 1px 10px rgba(0, 0, 0, 1);
   font-size: 5rem;
-  /* background: linear-gradient(
-    180deg,
-    rgba(89, 223, 149, 0.7) 0%,
-    rgba(26, 145, 79, 0.7) 100%
-  ); */
-  background-color: rgba(69, 209, 132, 1);
-  padding: 2rem 4rem 2rem 4rem;
+  width: 30rem;
+  height: 10rem;
   border-radius: 1rem;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  background-color: var(--verde-medio);
+  transition: background-color 0.2s ease, width 0.2s ease, height 0.2s ease,
+    font-size 0.2s ease, text-shadow 0.2s ease, box-shadow 0.2s ease;
+  display: flex;
+  place-items: center;
+  place-content: center;
 }
 .scroll:hover {
   color: white;
-  text-decoration: underline;
+  width: 28rem;
+  height: 9rem;
+  font-size: 4.6rem;
+  background-color: var(--verde-claro);
+  padding: 1.5rem 3.5rem;
+  border: none;
+  text-shadow: 1px 1px 9px rgba(0, 0, 0, 1);
+  box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.5);
 }
+
 .circles {
   cursor: pointer;
   margin: 0.5rem;
