--- a/front/src/components/CreadorReviews/CreadorReviews.module.css
+++ b/front/src/components/CreadorReviews/CreadorReviews.module.css
@@ -1,20 +1,19 @@
 .reviewsCard {
-  background-color: #232323;
+  background-color: var(--verde-medio);
   border-radius: 10px;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
   margin-bottom: 25px;
   padding: 25px;
   display: flex;
-  width: 500px;
-  max-width: 500px;
-  height: 500px;
+  width: min-content;
+  max-height: min-content;
   overflow: hidden;
   margin: 0 auto;
 }
 
-.reviewsCard-header{
-    display: flex;
-    justify-content: center;
+.reviewsCard-header {
+  display: flex;
+  justify-content: center;
 }
 
 .form-container {
@@ -24,9 +23,33 @@
   justify-content: center;
   margin-top: 200px;
 }
+.reviewsCard h1 {
+  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
 
 .label-input {
   display: flex;
   justify-content: space-between;
   width: 100%;
+}
+
+.input {
+  padding: 0.5rem;
+  text-align: center;
+  border-radius: 0.7rem;
+}
+.textarea {
+  border-radius: 0.7rem;
+  color: #111;
+  padding: 0.2rem 1rem;
+  resize: none;
+}
+
+.submit {
+  color: #111;
+  font-weight: 600;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+.stars {
+  font-size: x-large;
 }
