--- a/front/src/components/Detail/Detail.module.css
+++ b/front/src/components/Detail/Detail.module.css
@@ -3,27 +3,37 @@
   flex-direction: column;
   align-items: center;
   text-align: left;
-  margin-left: 1rem;
+  margin: 1rem;
   max-width: 55%;
   font-weight: 500;
 }
 
 .container form {
-  /* border: 2px solid white; */
-  padding: 1rem;
-  margin-top: 1rem;
+  padding: 2rem 1rem 2rem 1rem;
+  margin: 3rem;
   border-radius: 1rem;
-  background-color: #202020;
   display: flex;
   flex-direction: column;
   place-content: center;
-  color:white
+  color: #111;
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.5);
 }
 
 .container form button[type="submit"] {
-  background-color: rgb(255, 255, 255);
-  color: black;
-  font-weight: 700;
+  background-color: #1ca6e9;
+  color: white;
+  font-weight: 600;
+  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
+  display: flex;
+  place-content: space-around;
+  align-items: center;
+  width: 18rem;
+}
+.submit img {
+  max-width: 2.5rem;
+  margin-left: 0;
 }
 
 .father {
@@ -41,25 +51,33 @@
 }
 
 .ocupado {
-  padding: 10px 20px 10px 20px;
+  /* width: 10rem;
+  height: 5rem; */
   border-radius: 1rem;
-  margin-right: 0.5rem;
-  margin-bottom: 0.5rem;
-  background-color: #ba3b3b;
+  margin: 0.5rem;
+  cursor: pointer;
   border: none;
+  background-color: #ba3b3b;
+  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+  font-size: 18pt;
+  text-align: center;
 }
 .ocupado:hover {
   cursor: not-allowed;
 }
 
 .libre {
-  padding: 10px 20px 10px 20px;
+  /* width: 10rem;
+  height: 5rem; */
   border-radius: 1rem;
-  margin-right: 0.5rem;
-  margin-bottom: 0.5rem;
+  margin: 0.5rem;
   cursor: pointer;
   border: none;
-  background-color: #3BBA74;
+  background-color: var(--verde-medio);
+  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+  font-size: 18pt;
+  text-align: center;
+  transition: background-color 0.2s ease-in-out;
 }
 .libre:focus {
   background-color: rgb(39, 83, 204);
@@ -76,32 +94,59 @@
 .libre:hover {
   cursor: pointer;
   border: none;
+  background-color: var(--verde-claro);
 }
 
 .seleccionado {
-  padding: 10px 20px 10px 20px;
-  border-radius: 1rem;
-  margin-right: 0.5rem;
-  margin-bottom: 0.5rem;
-  cursor: pointer;
+  transition: background-color 200ms ease-in-out;
   background-color: rgb(39, 83, 204);
+  border-radius: 1rem;
+  margin: 0.5rem;
+  cursor: pointer;
   border: none;
+
+  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5);
+  font-size: 18pt;
+  text-align: center;
+}
+.seleccionado:focus {
+  outline: none;
+  border: none
 }
 
 .date {
-  font-size: 1.1em;
-  border: 2px solid white;
+  /* font-size: 1.5em; */
+  border: 2px solid #111;
   padding: 3px 5px 3px 7px;
-  border-radius: 1.2em;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-  color: white;
+  border-radius: 1rem;
+  color: #111;
+  background-color: rgb(255, 255, 255);
+  color-scheme: dark;
+  font-size: larger;
+  font-weight: 600;
 }
-
+.date:active {
+  border: 2px solid var(--verde-medio);
+}
+.date::-webkit-calendar-picker-indicator {
+  background: url(https://cdn3.iconfinder.com/data/icons/linecons-free-vector-icons-pack/32/calendar-16.png)
+    center/80% no-repeat;
+  color: black;
+}
 .dateContainer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
+  font-size: 2.1rem;
+  background-color: var(--verde-medio);
+  padding: 1rem;
+  color: white;
+  border-radius: 1rem;
+  text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+}
+.dateContainer p {
+  line-height: 1.2;
+  margin-top: 0rem;
 }
 .canchaimg {
   max-width: 55rem;
@@ -115,14 +160,14 @@
 .cancha {
   margin: 2rem;
   text-align: center;
+  border-radius: 1rem;
+  box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.5);
 }
 .horarios {
-  margin: 1rem;
-  background-color: #f1f1f1;
+  background-color: #ffffff;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  padding: 1rem;
   border-radius: 1rem;
-  box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.5);
+  justify-content: space-around;
+  padding: 0 1rem 1rem 1rem;
 }
