--- a/front/src/components/Reviews/Reviews.css
+++ b/front/src/components/Reviews/Reviews.css
@@ -1,29 +1,34 @@
 .reviews {
-  width: 50%;
-  padding: 20px;
-  margin: 0 auto;
+  /* width: 50%; */
+  /* padding: 20px; */
+  display: flex;
+  flex-direction: column;
+  place-content: center;
 }
 
 .card-container {
   display: flex; /* Alinea horizontalmente */
-  justify-content: space-between;
-  margin-left: -320px;
+  flex-direction: row;
+  place-content: center;
+  align-items: center;
+  max-width: 100%;
 }
 
 .card-review {
-  border-radius: 10px;
-  box-shadow: 0-3 px6 px rgba (0, 0, 0, 0.1);
-  margin-bottom: 20px;
-  overflow: hidden;
-  width: 100%;
-  min-width: 350px;
-  height: 200px;
+  border-radius: 1rem;
+  
+  /* overflow: hidden; */
+  width: min-content;
+  min-width: 30rem;
+  height: 20rem;
   margin: 1rem;
-  margin-left: 50px;
   box-sizing: border-box;
   max-width: auto;
-  background-color: #252525;
-
+  background-color: var(--verde-medio);
+  display: flex;
+  flex-direction: column;
+  place-content: center;
+  align-items: center;
 }
 
 .card-header {
@@ -66,12 +71,13 @@
 .prev-btn,
 .next-btn {
   background-color: #007bff;
-  color: #fff;
+  color: #000000;
   border: none;
   border-radius: 20px;
   padding: 10px 20px;
   margin-right: 10px;
   cursor: pointer;
+  z-index: 99;
 }
 
 .prev-btn:hover,
