--- a/front/src/components/Profile/Profile.module.css
+++ b/front/src/components/Profile/Profile.module.css
@@ -5,10 +5,10 @@
   place-items: flex-start;
   padding: 2rem;
   border-radius: 1rem;
-  width: min-content + 3rem;
+  width: 45rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-  height: min-content;
-  margin: 3rem auto;
+  height: max-content;
+  margin: 0 auto;
   transition: height 0.2s ease;
 }
 .profileContainer div {
@@ -25,14 +25,14 @@
   /* border: 1px solid rgb(161, 161, 161); */
   box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.5);
   padding: 0 1rem;
-  width: 30rem;
+  min-width: 40rem;
   margin: 0.5rem 0;
   border-radius: 1rem;
   transition: box-shadow 0.2s ease-in-out;
   font-size: larger;
 }
-.inputs:focus{
-  border:none;
+.inputs:focus {
+  border: none;
   outline: none;
   box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.7);
 }
@@ -44,6 +44,24 @@
 }
 
 /* Firefox */
-.inputs[type=number] {
+.inputs[type="number"] {
   -moz-appearance: textfield;
+}
+.cancelar {
+  background-color: darkred;
+  margin: 0 1rem;
+  transition: background-color 0.3s ease;
+}
+.cancelar:hover {
+  outline: none;
+  background-color: red !important;
+}
+.submitButton {
+  background-color: var(--verde-medio) !important;
+  /* background: var(--verde-medio); */
+  transition: background-color 0.3s ease, text-shadow 0.3s ease;
+}
+.submitButton:hover {
+  background-color: var(--verde-claro) !important;
+  text-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
 }
