--- a/front/src/components/MisReservas/MisReservas.module.css
+++ b/front/src/components/MisReservas/MisReservas.module.css
@@ -1,77 +1,55 @@
 .reservasTableContainer {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 1rem;
-    background-color: #2a2a2a;
-    padding: 1rem;
-    border-radius: 5px;
-    margin: 3rem;
-    width: 80rem;
-  }
-  
-  .reservasTable {
-    width: 100%;
-    border-collapse: collapse;
-    color: #f0f0f0;
-  }
+  display: flex;
+  background-color: #ffffff;
+  /* padding: 1rem; */
+  border-radius: 1rem;
+  margin-left: 3rem;
+  width: 80rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  color: #111;
+}
 
-  .reservasTable th {
-    background-color: #3a3a3a;
-    padding: 0.5rem;
-    text-align: center;
-  }
-  
-  .reservasTable td {
-    padding: 0.5rem;
-    border-bottom: 1px solid #3a3a3a;
-  }
-  
-  .reservasTable button {
-    background-color: transparent;
-    border: none;
-    color: #f0f0f0;
-    cursor: pointer;
-    margin-right: 0.5rem;
-  }
-  
-  .reservasTable button:hover {
-    color: #d0d0d0;
-  }
-  .title {
-    display:flex;
-    place-content: flex-start; 
-    margin: 3rem;
-    color: white;
-    font-weight: 600;
-  }
-  
-  .error-message {
-    color: red;
-  }
-  
-  .form-container {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .form-container input {
-    color: green;
-    width: 25rem;
-  }
-  
-  .form-container textarea {
-    color: green;
-  }
-  
-  .form-container select {
-    color: green;
-    width: 20rem;
-    height: 5rem;
-  }
-  
-  .form-container label {
-    color: white;
-    font-weight: bold;
-    font-size: 1.5rem;
-  }
-  
+.reservasTable {
+  width: 100%;
+  border-collapse: collapse;
+  border-radius: 1rem;
+}
+
+.reservasTable thead tr th {
+  background-color: var(--verde-medio);
+}
+
+.reservasTable th {
+  color: white;
+  padding: 0.5rem;
+  text-align: center;
+}
+
+.reservasTable td {
+  padding: 0.5rem;
+  /* border-bottom: 1px solid #3a3a3a; */
+}
+
+.reservasTable button {
+  background-color: transparent;
+  border: none;
+  color: #f0f0f0;
+  cursor: pointer;
+  margin-right: 0.5rem;
+}
+
+.reservasTable button:hover {
+  color: #d0d0d0;
+}
+.title {
+  display: flex;
+  place-content: flex-start;
+  margin: 3rem;
+  color: #111;
+  font-weight: 600;
+
+}
+
+.eachReserve td {
+  /* border: 1px solid rgba(0,0,0,0.25); */
+}
