--- a/front/src/components/Contactos/Contactos.css
+++ b/front/src/components/Contactos/Contactos.css
@@ -2,15 +2,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* margin-top: 50px; */
-  background-color: var(--verde-medio);
+  place-content: center;
+  margin: 2rem auto;
+  background-color: white;
+  max-width: max-content;
+  padding: 2rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  border-radius: 1rem;
 }
 
 .card {
   padding: 30px;
   border-radius: 10px;
-  box-shadow: rgba(0, 0, 0, 0.1) -3px -3px +15px -20%;
-  margin-bottom: 100px;
+  /* box-shadow: rgba(0, 0, 0, 0.1) -3px -3px +15px -20%; */
+  /* margin-bottom: 100px; */
 }
 
 .form-container-contacto {
@@ -18,6 +23,24 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   gap: 1rem;
+
+}
+.form-container-contacto input,
+.form-container-contacto textarea {
+  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.5);
+  padding: 2px 10px;
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+  min-width: 30rem;
+}
+.form-container-contacto input:focus, 
+.form-container-contacto textarea:focus {
+  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.8);
+  border: none;
+  outline: none;
+}
+.form-container-contacto label {
+  color: #111;
 }
